--- a/login.html
+++ b/login.html
@@ -22,7 +22,13 @@
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
       width: 320px;
       text-align: center;
-  }
+  
+}
+     .login-container h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+
 ~
 ~
 ~
