--- a/login.html
+++ b/login.html
@@ -28,6 +28,16 @@
       margin-bottom: 20px;
       color: #333;
     }
+input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-sizing: border-box;
+    }
+
 
 ~
 ~
