--- a/login.html
+++ b/login.html
@@ -38,6 +38,11 @@ input[type="email"],
       box-sizing: border-box;
     }
 
+.login-container a {
+      font-size: 13px;
+      color: #007BFF;
+      text-decoration: none;
+    }
 
 ~
 ~
