--- a/login.html
+++ b/login.html
@@ -44,6 +44,17 @@ input[type="email"],
       text-decoration: none;
     }
 
+.login-container button {
+      width: 100%;
+      padding: 12px;
+      margin: 12px 0;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+    }
 ~
 ~
 ~
