--- a/login.html
+++ b/login.html
@@ -55,7 +55,12 @@ input[type="email"],
       cursor: pointer;
       font-size: 16px;
     }
-~
+.divider {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 20px 0;
+    }~
 ~
 ~
 ~
