--- a/login.html
+++ b/login.html
@@ -60,7 +60,18 @@ input[type="email"],
       align-items: center;
       text-align: center;
       margin: 20px 0;
-    }~
+    .divider::before,
+    .divider::after {
+      content: '';
+      flex: 1;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .divider:not(:empty)::before {
+      margin-right: .75em;
+    }
+
+}~
 ~
 ~
 ~
