--- a/login.html
+++ b/login.html
@@ -71,6 +71,10 @@ input[type="email"],
       margin-right: .75em;
     }
 
+ .divider:not(:empty)::after {
+      margin-left: .75em;
+    }
+
 }~
 ~
 ~
