--- a/login.html
+++ b/login.html
@@ -75,7 +75,15 @@ input[type="email"],
       margin-left: .75em;
     }
 
-}~
+ .social-button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 6px;
+      margin-top: 10px;
+      font-size: 15px;
+      cursor: pointer;
+    }}~
 ~
 ~
 ~
