--- a/login.html
+++ b/login.html
@@ -83,7 +83,11 @@ input[type="email"],
       margin-top: 10px;
       font-size: 15px;
       cursor: pointer;
-    }}~
+    .facebook-btn {
+      background-color: #3b5998;
+      color: white;
+    }
+}}~
 ~
 ~
 ~
