--- a/login.html
+++ b/login.html
@@ -88,6 +88,13 @@ input[type="email"],
       color: white;
     }
 }}~
+
+ .google-btn {
+      background-color: white;
+      color: #444;
+      border: 1px solid #ccc;
+    }
+
 ~
 ~
 ~
