--- a/login.html
+++ b/login.html
@@ -94,6 +94,14 @@ input[type="email"],
       color: #444;
       border: 1px solid #ccc;
     }
+.signup-link {
+      font-size: 14px;
+      margin-top: 10px;
+    }
+
+  </style>
+</head>
+<body>
 
 ~
 ~
