--- a/login.html
+++ b/login.html
@@ -104,6 +104,14 @@ input[type="email"],
 <body>
 <div class="login-container">
   <h2>Login</h2>
+<form>
+    <input type="email" placeholder="Email" required>
+    <input type="password" placeholder="Password" required>
+    <div style="text-align: right; margin-bottom: 10px;">
+      <a href="#">Forgot password?</a>
+    </div>
+    <button type="submit">Login</button>
+  </form>
 
 ~
 ~
