--- a/login.html
+++ b/login.html
@@ -113,19 +113,16 @@ input[type="email"],
     <button type="submit">Login</button>
   </form>
 
-~
-~
-~
 
-~
-~
-~
-~
-~
+ <div class="signup-link">
+    Don’t have an account? <a href="signup.html">Signup</a>
+  </div>
 
-~
-~
-~
-~
-~
+  <div class="divider">Or</div>
 
+  <button class="social-button facebook-btn">Login with Facebook</button>
+  <button class="social-button google-btn">Login with Google</button>
+</div>
+
+</body>
+</html>
